2006-09-04 Jens Tkotz <jens@peino.de> 1.5.5-svn-b5

 * Fix: Preloading fix from b1 was not fully correct.

 * Change: centered photo and navigation when embedded.

 * Fix: HTML fix in ecard form.

2006-09-04 Jens Tkotz <jens@peino.de> 1.5.5-svn-b4

 * Fix: Shadow frame files were corrupted ?!?

2006-09-02 Jens Tkotz <jens@peino.de> 1.5.5-svn-b3

 * Fix: Fix for next Tab in b1 was not fully correct.

2006-09-02 Jens Tkotz <jens@peino.de> 1.5.5-svn-b2
 
 * Fix: Link to colorpicker was broken.
        (Thanks to chasba from IRC)

2006-09-02 Jens Tkotz <jens@peino.de> 1.5.5-svn-b1

 * Fix: Font color issue in multifile Js

 * Fix: "next tab" was broken in Config

 * Fix: Preloading feature in FF does not increase the counter
	in view_album and view_photo.
	(Thanks to Jade)

2006-08-14 Jens Tkotz <jens@peino.de>

 ***  Release: 1.5.4 ***

2006-08-14 Jens Tkotz <jens@peino.de> 1.5.4-svn-b17

 * Fix: #1444556;

2006-08-14 Jens Tkotz <jens@peino.de> 1.5.4-svn-b16

 * Change: _() to gTranslate at various places.

2006-08-14 Jens Tkotz <jens@peino.de> 1.5.4-svn-b15

 * Change: Use non-table tabs from 1.6

 * HTML fixes in setup/config_data.inc

 * Adjustments in skins: hotred, yellow, jenskin, white1

 * Some indenting.

 * if galleryLink as empty target, dont use href=

2006-08-13 Jens Tkotz <jens@peino.de> 1.5.4-svn-b14

 * Change: Removed "No Votes messages".

 * Change: Show link to full results only if there are results.

2006-08-13 Jens Tkotz <jens@peino.de> 1.5.4-svn-b13
 
 * Fix: Links in voting box were wrong.

 * CSS changes in view_album.php

 * Jensskin updates.

2006-08-02 Jens Tkotz <jens@peino.de> 1.5.4-svn-b12

 * Fix: JS warning in ImageMap when no ImageMap is available.
   Thanks to StephaneT from forums.

 * Little CSS changes in jenskin.

2006-07-29 Jens Tkotz <jens@peino.de> 1.5.4-svn-b11

 * Fix: Order of captions was mixed in IE and Opera when given direct in the form.
	Fixed by using this.nextSibling in insertBefore()
